Message Notification Tweaks

--- a/SouthDakotaDiaspora/Site/Views/Users/Details.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Users/Details.cshtml
@@ -35,6 +35,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.DiscordId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DiscordId)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.UserRole)
         </dt>
 
