--- a/SouthDakotaDiaspora/Site/Views/Users/Create.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Users/Create.cshtml
@@ -54,6 +54,14 @@ else
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.DiscordId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DiscordId, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.DiscordId, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.UserRole, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EnumDropDownListFor(model => model.UserRole, new { htmlAttributes = new { @class = "form-control" } })
