--- a/SouthDakotaDiaspora/Site/Content/themes/custom/Diaspora.css
+++ b/SouthDakotaDiaspora/Site/Content/themes/custom/Diaspora.css
@@ -4,6 +4,10 @@
     src: url(../../../fonts/Caroni-Regular.otf)
 }
 
+h1, h2, h3, h4, h5, h6 {
+    text-align: center;
+}
+
 .clickable-row:hover {
     background-color: rgba(255, 255, 255, 0.25);
     filter: brightness(115%);
@@ -34,7 +38,10 @@
 }
 
 .header-selected {
-    filter: brightness(25%);
+    filter: brightness(155%);
+}
+li.header-selected > a {
+    color: greenyellow !important;
 }
 
 
