--- a/SouthDakotaDiaspora/Site/Views/Books/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Books/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Site.Models.Books.BookInfo>
 
 @{
-    ViewBag.Title = "Books";
+    ViewBag.Title = "Books & Articles";
 }
 
-<h2>Books</h2>
+<h2>Books & Articles</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
