--- a/SouthDakotaDiaspora/Site/Views/Timeline/Create.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Timeline/Create.cshtml
@@ -71,67 +71,89 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>TimelineEvent</h4>
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <hr />
+<div class="form-horizontal">
+    <h4>TimelineEvent</h4>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <hr />
 
-        <h5>Event Type:</h5>
-        @Html.Hidden("ActivityID")
-        <div style="@(Model.GameSelection.Count <= 0 ? "display: none;" : "")">
-            Game @Html.RadioButton("ActivityType", "game", false, new { @class = "ActivityTypeRadio", @id = "gamebutton" })
-            @Html.DropDownList("gamelist", @Model.GameSelection, new { @class = "ActivityTypeDropdown" })
-        </div>
+    <h3 class="text-left">Event Type:</h3>
+    @Html.Hidden("ActivityID")
+    <div class="col-md-12" style="@(Model.GameSelection.Count <= 0 ? "display: none;" : "")">
+        <span>Game</span>
+        @Html.RadioButton("ActivityType", "game", false, new { @class = "ActivityTypeRadio", @id = "gamebutton" })
+        @Html.DropDownList("gamelist", @Model.GameSelection, new { @class = "ActivityTypeDropdown" })
+    </div>
 
-        <div style="@(Model.ShowSelection.Count <= 0 ? "display: none;" : "")">
-            Movie/Show @Html.RadioButton("ActivityType", "show", false, new { @class = "ActivityTypeRadio", @id = "showbutton" })
-            @Html.DropDownList("showlist", @Model.ShowSelection, new { @class = "ActivityTypeDropdown" })
-        </div>
+    <div class="col-md-12" style="@(Model.ShowSelection.Count <= 0 ? "display: none;" : "")">
+        <span>Movie/Show</span>
+        @Html.RadioButton("ActivityType", "show", false, new { @class = "ActivityTypeRadio", @id = "showbutton" })
+        @Html.DropDownList("showlist", @Model.ShowSelection, new { @class = "ActivityTypeDropdown" })
+    </div>
 
-        <div style="@(Model.BookSelection.Count <= 0 ? "display: none;" : "")">
-            Book/Article @Html.RadioButton("ActivityType", "book", false, new { @class = "ActivityTypeRadio", @id = "bookbutton" })
-            @Html.DropDownList("booklist", @Model.BookSelection, new { @class = "ActivityTypeDropdown" })
-        </div>
+    <div class="col-md-12" style="@(Model.BookSelection.Count <= 0 ? "display: none;" : "")">
+        <span>Book/Article</span>
+        @Html.RadioButton("ActivityType", "book", false, new { @class = "ActivityTypeRadio", @id = "bookbutton" })
+        @Html.DropDownList("booklist", @Model.BookSelection, new { @class = "ActivityTypeDropdown" })
+    </div>
 
-        <div style="@(Model.ProjectSelection.Count <= 0 ? "display: none;" : "")">
-            Project @Html.RadioButton("ActivityType", "project", false, new { @class = "ActivityTypeRadio", @id = "projectbutton" })
-            @Html.DropDownList("projectlist", @Model.ProjectSelection, new { @class = "ActivityTypeDropdown" })
-        </div>
+    <div class="col-md-12" style="@(Model.ProjectSelection.Count <= 0 ? "display: none;" : "")">
+        <span>Project</span>
+        @Html.RadioButton("ActivityType", "project", false, new { @class = "ActivityTypeRadio", @id = "projectbutton" })
+        @Html.DropDownList("projectlist", @Model.ProjectSelection, new { @class = "ActivityTypeDropdown" })
+    </div>
 
+    <hr />
 
-
-        <hr />
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Tevent.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Tevent.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Tevent.Title, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Tevent.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Tevent.StartTime, new { htmlAttributes = new { @class = "form-control", @id = "start-time-picker" } })
-                @Html.ValidationMessageFor(model => model.Tevent.StartTime, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Tevent.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Tevent.EndTime, new { htmlAttributes = new { @class = "form-control", @id = "end-time-picker" } })
-                @Html.ValidationMessageFor(model => model.Tevent.EndTime, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+    <div class="form-group col-md-12">
+        @Html.LabelFor(model => model.Tevent.Title, htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.EditorFor(model => model.Tevent.Title, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Tevent.Title, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group col-md-12">
+        @Html.LabelFor(model => model.Tevent.StartTime, htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.EditorFor(model => model.Tevent.StartTime, new { htmlAttributes = new { @class = "form-control", @id = "start-time-picker" } })
+            @Html.ValidationMessageFor(model => model.Tevent.StartTime, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group col-md-12">
+        @Html.LabelFor(model => model.Tevent.EndTime, htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.EditorFor(model => model.Tevent.EndTime, new { htmlAttributes = new { @class = "form-control", @id = "end-time-picker" } })
+            @Html.ValidationMessageFor(model => model.Tevent.EndTime, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <hr />
+
+    <div class="form-group">
+        <h3 class="text-left">Notifications</h3>
+        <p><i>Notifications are used in discord to help you promote your event.</i></p>
+        <div>
+            <input name="NotifyCreated" class="checkbox-inline" type="checkbox" id="notifycreatedcheckbox" />
+            <label>Notify when created</label>
+        </div>
+        <div>
+            <input name="NotifyOneHour" class="checkbox-inline" type="checkbox" id="notifyonehourcheckbox" />
+            <label>Notify one hour before</label>
+        </div>
+        <div>
+            <input name="NotifyStarting" class="checkbox-inline" type="checkbox" id="notifystartingcheckbox" />
+            <label>Notify on event start</label>
+        </div>
+
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
