--- a/SouthDakotaDiaspora/Site/Views/Timeline/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Timeline/Index.cshtml
@@ -19,10 +19,10 @@
 <table class="timeline-table table" style="text-align: center;">
 
     @* HEADERS *@
-    <tr class="timeline-head"><td><h3></h3></td><td>Activity</td><td>Description</td><td>Duration</td><td>Platform</td><td>Host</td><td>Other's Attending</td><td></td></tr>
+    <tr class="timeline-head"><td><h3></h3></td><td>Activity</td><td>Description</td><td>Duration</td><td>Platform</td><td>Max Attendees</td><td>Host</td><td>Other's Attending</td><td></td></tr>
 
     <!-- Past Events -->
-    <tr class="timeline-prev"><td><h3 class="timeline-category-small">@("<--") Previous</h3></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+    <tr class="timeline-prev"><td><h3 class="timeline-category-small">@("<--") Previous</h3></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     @foreach (var item in Model.PastEvents)
     {
 <tr class="timeline-prev clickable-row" onclick="location.href ='@Url.Action("Details", new { id = item.TimelineEventId})'">
@@ -41,6 +41,9 @@
     </td>
     <td title="@Html.DisplayFor(modelItem => item.Platform)">
         @Html.DisplayFor(modelItem => item.PlatformAbbreviation)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.MaxAttendeesDisplay)
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.Host)
@@ -62,7 +65,7 @@
     }
 
     <!-- Today Events -->
-    <tr class="timeline-today"><td><span class="timeline-category-large">~ Now/Soon ~</span></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+    <tr class="timeline-today"><td><span class="timeline-category-large">~ Now/Soon ~</span></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     @foreach (var item in Model.TodayEvents)
     {
 <tr class="timeline-today clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.TimelineEventId})'">
@@ -83,6 +86,9 @@
         @Html.DisplayFor(modelItem => item.PlatformAbbreviation)
     </td>
     <td>
+        @Html.DisplayFor(modelItem => item.MaxAttendeesDisplay)
+    </td>
+    <td>
         @Html.DisplayFor(modelItem => item.Host)
     </td>
     <td>
@@ -90,7 +96,7 @@
         @if (Site.Helpers.GlobalMethods.GetCurrentUserId(this.Session) != null && item.Host != null)
         {
             int? userid = Site.Helpers.GlobalMethods.GetCurrentUserId(this.Session);
-            if (item.HostId != userid && !item.AttendingIds.Exists(i => i == (int)userid))
+            if (item.HostId != userid && !item.AttendingIds.Exists(i => i == (int)userid) && (item.MaxAttendees == 0 || item.AttendingIds.Count() < item.MaxAttendees))
             {
                 @Html.ActionLink("Join!", "JoinEvent", new { @id = item.TimelineEventId, userid = userid })
             }
@@ -98,6 +104,10 @@
             {
                 @Html.ActionLink("Cancel", "CancelEvent", new { @id = item.TimelineEventId, userid = userid })
             }
+        }
+        @if (item.MaxAttendees > 0 && item.AttendingIds.Count() >= item.MaxAttendees)
+        {
+            @:(Max Reached)
         }
     </td>
     <td>
@@ -111,7 +121,7 @@
     }
 
     <!-- Future Events -->
-    <tr class="timeline-future"><td><h3 class="timeline-category-small">Later --></h3></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+    <tr class="timeline-future"><td><h3 class="timeline-category-small">Later --></h3></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     @foreach (var item in Model.FutureEvents)
     {
 <tr class="timeline-future clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.TimelineEventId})'">
@@ -132,6 +142,9 @@
         @Html.DisplayFor(modelItem => item.PlatformAbbreviation)
     </td>
     <td>
+        @Html.DisplayFor(modelItem => item.MaxAttendeesDisplay)
+    </td>
+    <td>
         @Html.DisplayFor(modelItem => item.Host)
     </td>
     <td>
@@ -139,7 +152,7 @@
         @if (Site.Helpers.GlobalMethods.GetCurrentUserId(this.Session) != null && item.Host != null)
         {
             int? userid = Site.Helpers.GlobalMethods.GetCurrentUserId(this.Session);
-            if (item.HostId != userid && !item.AttendingIds.Exists(i => i == (int)userid))
+            if (item.HostId != userid && !item.AttendingIds.Exists(i => i == (int)userid) && (item.MaxAttendees == 0 || item.AttendingIds.Count() < item.MaxAttendees))
             {
                 @Html.ActionLink("Join!", "JoinEvent", new { @id = item.TimelineEventId, userid = userid })
             }
@@ -147,6 +160,10 @@
             {
                 @Html.ActionLink("Cancel", "CancelEvent", new { @id = item.TimelineEventId, userid = userid })
             }
+        }
+        @if (item.MaxAttendees > 0 && item.AttendingIds.Count() >= item.MaxAttendees)
+        {
+            @:(Max Reached)
         }
     </td>
     <td>
